// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it passes a11y on single radio 1`] = `
<div>
  <div
    class="govukFormGroup lbhFormGroup"
    id="test"
  >
    <label
      class="govukLabel lbhLabel"
      for="test-field"
    >
      NumberInput Test
      
    </label>
    <input
      class="govukInput lbhInput"
      id="test-field"
      name="test"
      role="spinbutton"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <input
    class="govukInput lbhInput"
    role="spinbutton"
    type="number"
    value=""
  />
</div>
`;
